updated assignment for HT

--- a/hypothesis/nba_updated.ipynb
+++ b/hypothesis/nba_updated.ipynb
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def weekend_new_column():"
+    "def weekend_new_column(df):"
    ]
   },
   {
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(Your answer goes here. Click to enable editing.)"
+    "(Your answer goes here. Double-click to enable editing.)"
    ]
   },
   {
@@ -450,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(5f). What is your null hypothesis to test whether the total points scores per game is different for weekend vs weekday games? You may assume that team scores for each game are iid (simplifying assumption) and that there are no other confounding variables impacting scoring."
+    "(5d). What is your null hypothesis to test whether the total points scores per game is different for weekend vs weekday games? You may assume that team scores for each game are iid (simplifying assumption) and that there are no other confounding variables impacting scoring."
    ]
   },
   {
@@ -464,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(5g). Using the weekend and weekday games for seasons 2000-201, perform a two-sample t-Test to test your null hypothesis? Feel free to use the scipy.stats library to perform the t-test for independent samples. <br>\n",
+    "(5e). Using the weekend and weekday games for seasons 2000-201, perform a two-sample t-Test to test your null hypothesis? Feel free to use the scipy.stats library to perform the t-test for independent samples. <br>\n",
     "Print the t-statistic and the associated p-value."
    ]
   },
@@ -589,8 +589,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6g). Perform a two-sample t-Test to test your null hypothesis. Feel free to use the scipy.stats library to perform the t-test for independent samples.<br>\n",
-    "Print the t-statistic and the associated p-value."
+    "(6g). Print the mean total score per game for Playoffs and Regular seasons (between 1960-80)."
    ]
   },
   {
@@ -604,21 +603,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6h). Print the mean total score per game for Playoffs and Regular seasons (between 1960-80)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "(6i). On the 1960-1980 subset, perform a two-sample t-Test to test your null hypothesis. Feel free to use the scipy.stats library to perform the t-test for independent samples. <br>\n",
+    "(6h). On the 1960-1980 subset, perform a two-sample t-Test to test your null hypothesis. Feel free to use the scipy.stats library to perform the t-test for independent samples. <br>\n",
     "Print the t-statisitc and the associated p-value."
    ]
   },
@@ -633,7 +618,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6j). What is your conclusion about Regular season scoring vs scoring in Playoffs during 1960-80?"
+    "(6i). What is your conclusion about Regular season scoring vs scoring in Playoffs during 1960-80?"
    ]
   },
   {
@@ -647,7 +632,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6k). Now restrict attention to seasons 2000-2017. <br>\n",
+    "(6j). Now restrict attention to seasons 2000-2017. <br>\n",
     "Produce playoff and regular season subsets for seasons between 2000 and 2017 (both inclusive)."
    ]
   },
@@ -662,7 +647,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6l). What are the mean total scores per game for Playoffs and Regular seasons (2000-2017)?"
+    "(6k). What are the mean total scores per game for Playoffs and Regular seasons (2000-2017)?"
    ]
   },
   {
@@ -676,7 +661,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6m). For the seasons 2000-2017, perform a two-sample t-Test to test your null hypothesis. Feel free to use the scipy.stats library to perform the t-test for independent samples. <br>\n",
+    "(6l). For the seasons 2000-2017, perform a two-sample t-Test to test your null hypothesis. Feel free to use the scipy.stats library to perform the t-test for independent samples. <br>\n",
     "Print the t-statisitc and the associated p-value."
    ]
   },
@@ -691,7 +676,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(6n). What is your conclusion about Regular season scoring vs scoring in Playoffs during 2000-17? Do you have evidence that the differences in scoring are no longer as different as they used to be?"
+    "(6m). What is your conclusion about Regular season scoring vs scoring in Playoffs during 2000-17? Do you have evidence that the differences in scoring are no longer as different as they used to be?"
    ]
   },
   {
@@ -904,7 +889,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(8b). Call the <b>rest_data()</b> function to update the dataframe."
+    "(8b). Call the <b>rest_days(df)</b> function to update the dataframe."
    ]
   },
   {
@@ -962,7 +947,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(8f). What would your Null Hypothesis be if you wanted to test whether back_to_back games produce different scoring than games with combined rest between 3-4 days? Assume there are no other confounding variables at play."
+    "(8f). What would your Null Hypothesis be if you wanted to test whether back_to_back games produce different scoring than games with combined rest between 4-5 days? Assume there are no other confounding variables at play."
    ]
   },
   {
