--- a/regression/Simpe OLS.ipynb
+++ b/regression/Simpe OLS.ipynb
@@ -6,20 +6,29 @@
    "source": [
     "# Ordinary Least Squares Regression\n",
     "In this exercise, we will build simple OLS Regression models, both single and multivariable. We will also evaluate the goodness of fit of our simple models.\n",
-    "For this exercise, we will be using the Auto dataset. It is provided as Auto.csv in the same folder as this notebook."
+    "For this exercise, we will be using the Auto dataset. It is provided as <b>Auto.csv</b> in the same folder as this notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jehangiramjad1/anaconda/lib/python2.7/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "  from pandas.core import datetools\n"
+     ]
+    }
+   ],
    "source": [
     "#Import the necessary libraries\n",
     "%matplotlib inline\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
-    "mport utils\n",
+    "import utils\n",
     "import numpy as np\n",
     "import statsmodels.api as sm\n",
     "from scipy import stats"
@@ -52,10 +61,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "392\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(df))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,6 +139,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(0f). Produce two subsets of your data: a random subset for training and the remaining for testing. You should have roughly 70% of the data in training and the remaining roughly 30% in testing. Name your datasets as <b>df_train</b> and <b>df_test</b>."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(274, 118)\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_indices = np.sort(np.random.choice(range(0, len(df)), int(0.7*len(df)), replace=False))\n",
+    "df_train = df[:][0:274]\n",
+    "df_test = df[:][274:]\n",
+    "print(len(df_train), len(df_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<b> (1). Single Variable OLS Regression.</b> <br>\n",
     "We will start with a single variable regression model. We hypothesize a simple linear relationship (with intercept) between 'mpg' and 'horsepower'"
    ]
@@ -128,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(1a). Build a simple OLS model using <b>statsmodels.OLS</b> <br>\n",
+    "(1a). On <b>df_train</b> ONLY, build a simple OLS model using <b>statsmodels.OLS</b> <br>\n",
     "Your dependent variable is 'mpg'; <br>\n",
     "Independent variable is 'horsepower'. <br>\n",
     "Do include the  intercept using the add_constant() function in statsmodels. <br>\n",
@@ -308,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>(2). Single Variable OLS Regression. </b> <br>\n",
+    "<b>(2). Two Variable OLS Regression. </b> <br>\n",
     "We will now add one more variable to the single variable regression model. We hypothesize a simple linear relationship (with intercept) between 'mpg', 'horsepower' and 'horsepower' (squared)."
    ]
   },
