--- a/regression/WLS.ipynb
+++ b/regression/WLS.ipynb
@@ -226,7 +226,7 @@
    "metadata": {},
    "source": [
     "<b>2. Weights Least Squares (WLS)</b><br>\n",
-    "Given the apparent heteroskedasticity, we will look to Weighted Least Squares to produce estimates of the parameters and the standard errors. Refer to the theory problem set for a detailed theoretical development of WLS estimation. In this case, we are not provided information about the variance of each data point. Therefore, we face the harder problem of first having to produce estimates of the appropriate weights to eliminate hetereoskedasticity."
+    "Given the apparent heteroskedasticity, we will look to Weighted Least Squares to produce estimates of the parameters and the standard errors. Refer to Problem Set 5 for a theoretical development of WLS estimation. In this case, we are not provided information about the variance of each data point. Therefore, we face the harder problem of first having to produce estimates of the appropriate weights to eliminate hetereoskedasticity."
    ]
   },
   {
@@ -495,21 +495,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
