Project 2 final edits

--- a/regression/Regularization.ipynb
+++ b/regression/Regularization.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "# Model Selection via Regularization\n",
     "In this exercise, we will introduce regularization terms in our regression models to prevent overfitting. We will compare the effects of L2 (Ridge) to that of L1 (LASSO) regularization on the values of coefficients. For this exercise, we will be using the cars dataset. It is provided as <b>cars.csv</b> in the same folder as this notebook."
@@ -10,18 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jehangiramjad1/anaconda/lib/python2.7/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
-      "  from pandas.core import datetools\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Import the necessary libraries\n",
     "%matplotlib inline\n",
@@ -35,7 +29,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "Read the data as a pandas dataframe. For refernece: https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.html"
    ]
@@ -53,7 +50,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(0a). Print the number of observations in the dataset. "
    ]
@@ -67,7 +67,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(0b). Print all the columns in the dataset"
    ]
@@ -81,7 +84,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(0c).Produce a Scatter plot of all variables against each other. <br> \n",
     "Feel free to use the <b>scatter_plot_dataframe()</b> function in utils.py. <br>\n",
@@ -97,7 +103,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(0d). Produce a plot of correaltions between all variables. <br>\n",
     "Feel free to use the <b>correlation_plot()</b> function in utils.py"
@@ -112,7 +121,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(0e). Using the plots above, which variables have a (roughly) linear relationship with 'mpg'? "
    ]
@@ -121,12 +133,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "cyl, disp, wt"
+    "(Type your answer here)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "<b> (1). Ridge Regression.</b> <br>\n",
     "We will run Ridge regression by introducing an L2 penalty on the regression coefficients."
@@ -134,7 +149,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1a). Build a simple OLS model using <b>statsmodels.OLS</b> <br>\n",
     "Your dependent variable is 'mpg'. <br>\n",
@@ -153,7 +171,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1b). Use statsmodels' <b>fit_regularized()</b> function to write a function <b>get_sv_ridge()</b> which fits the model with an L2 penalty of weight $\\alpha$ on an OLS model. Your function should take as arguments the statsmodels OLS model and $\\alpha$ and return the fit."
    ]
@@ -167,7 +188,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1c). Use <b>get_sv_ridge()</b> to plot the Ridge regression coefficients vs. $\\alpha$ for each independent variable and for vs. $log(\\alpha)$ (use log base 10) for each independent variable and for $\\alpha$ in the range [0.1,100.1] in small increments.<br>\n",
     "Ensure that your legend clearly labels all lines (one per each variable) and the axes are appropriately labeled (x-axis should have $log(\\alpha)$ and the y-axis should have the parameter values)."
@@ -182,7 +206,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1d). What do you notice about the coefficients as the regularization penalty in increased? "
    ]
@@ -196,7 +223,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "<b>(2). LASSO (Least Absolute Shrinkage and Selection Operator). </b> <br>\n",
     "We will now run LASSO by introducing an L1 penalty on the regression coefficients."
@@ -204,7 +234,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2a). Use statsmodels' <b>fit_regularized()</b> function to write a function <b>get_sv_lasso()</b> which fits the model with an L1 penalty of weight $\\alpha$ and returns the output. Your function should take as arguments the statsmodels OLS model and $\\alpha$ and return the fit."
    ]
@@ -218,7 +251,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2b). Use <b>get_sv_lasso()</b> to plot the LASSO coefficients vs. $log(\\alpha)$ (use log base 10) for each independent variable and for $\\alpha$ in the range [0.1,100.1] in small increments. <br>\n",
     "Ensure that your legend clearly labels all lines (one per each variable) and the axes are appropriately labeled (x-axis should have $log(\\alpha)$ and the y-axis should have the parameter values)."
@@ -233,7 +269,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2c). What do you notice about the coefficients as the regularization penalty is increased? Contrast the behavior with what you observed for Ridge Regression? Which might you prefer for model selection, i.e. choosing a sparse subset of features (columns) in a regression model?"
    ]
