--- a/regression/WLS.ipynb
+++ b/regression/WLS.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "# Weighted Least Squares (WLS) Regression\n",
     "In this exercise we will study the impact of hetereoskedasticity (non-constant variance) of errors and a possible approach to rectify the Ordinary Least Squares (OLS) model.<br>\n",
@@ -46,7 +49,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "<b>1. OLS Regression</b><br>\n",
     "We will first build an OLS regression model. Note that we expect the estimated co-efficients, $\\hat{\\beta_0}, \\hat{\\beta_1}$, to be unbiased estimators of $\\beta_0, \\beta_1$, due to the assumed properties of the errors. However, note that we have <b>not</b> assumed homoskedasticity (constant variance) of noise terms."
@@ -54,7 +60,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1a). Run an OLS regression (using the <b>statsmodels.OLS</b> library) with: <br>\n",
     "y as the dependent variable, <br>\n",
@@ -72,7 +81,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1b). Fit the model using <b>ols_model.fit()</b> and save the result as <b>ols_results</b>."
    ]
@@ -86,7 +98,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1c). Print the summary by calling <b>ols_results.summary()</b>. Comment on the statistical significance of the parameters."
    ]
@@ -107,7 +122,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1d). Produce the in-sample predictions, and store them as <b>ols_y_hat</b>. Use <b>predict()</b> function with the parameters from <b>ols_results</b>. <br>\n",
     "Check: http://www.statsmodels.org/dev/generated/statsmodels.regression.linear_model.OLS.predict.html"
@@ -122,7 +140,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1e). Compute the residuals. Store them as <b>ols_residuals</b>."
    ]
@@ -136,7 +157,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1f). On the same plot, produce the following:\n",
     "1. Scatter plot of the data (x, y) <br>\n",
@@ -153,7 +177,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1g). Comment on the fit produced."
    ]
@@ -167,7 +194,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1h). Produce a scatter plot of the residuals vs 'x'. Label your plot and axes."
    ]
@@ -181,7 +211,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1i). What does this plot show? Is there evidence of constant variance (or otherwise)?"
    ]
@@ -195,7 +228,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1j). Now produce a QQ-plot of the residuals vs the Normal distribution. You can use the <b>probplot()</b> function in the <b>Scipy.stats</b> library using default options."
    ]
@@ -209,7 +245,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1k). Do the residuals appear Normally distributed?"
    ]
@@ -223,7 +262,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "<b>2. Weights Least Squares (WLS)</b><br>\n",
     "Given the apparent heteroskedasticity, we will look to Weighted Least Squares to produce estimates of the parameters and the standard errors. Refer to Problem Set 5 for a theoretical development of WLS estimation. In this case, we are not provided information about the variance of each data point. Therefore, we face the harder problem of first having to produce estimates of the appropriate weights to eliminate hetereoskedasticity."
@@ -231,7 +273,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2a). Write a function <b>estW()</b> which takes as input the following: <br><br>\n",
     "1. An array of OLS residuals <br>\n",
@@ -247,18 +292,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-2-d856550e6fe6>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-d856550e6fe6>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def estW(residuals, x): # complete the rest of the function\u001b[0m\n\u001b[0m                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def estW(residuals, x): \n",
     "    # complete the rest of the function\n",
@@ -267,7 +303,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2b). Use the <b>estW(ols_residuals, x)</b> function to produce the estimates of the variances. Save these estimates as <b>sig_est</b>"
    ]
@@ -281,7 +320,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2c). On the same plot, produce the following in different colors: <br>\n",
     "1. Scatter Plot of the absolute values of ols_residuals against x. <br>\n",
@@ -298,7 +340,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2d). What does the plot above show? Do you think the estimated residuals make sense?"
    ]
@@ -312,7 +357,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2e). Now we will use the estimates of the variances to determine the weights to be used for WLS. <br>\n",
     "Compute the weights for each point as the reciprocal of the <b>square-root of variance estimates</b>.<br>\n",
@@ -328,7 +376,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2e). Produce the following variables: <br>\n",
     "i. <b>X</b> = independent variable (x) and a constant (use add_constant(x) from the statsmodels library). <br>\n",
@@ -346,7 +397,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2f). Run an OLS regression (using the <b>statsmodels.OLS</b> library) with <b>y_w</b> and <b>X_w</b>. Save your model as <b>wls_model</b>."
    ]
@@ -360,7 +414,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2e). Similar to the OLS exercise above, produce the fit, in-sample predictions and residuals. <br>\n",
     "Save them as <b>wls_results, wls_y_hat, wls_residuals</b>, respectively."
@@ -375,7 +432,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2f). Print the summary of this regression. Comment on the statistical significance of the parameters and contrast them to the simple OLS model earlier."
    ]
@@ -396,7 +456,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2g). Show the scatter plot of these <b>wls_residuals</b> vs x. Is there continued evidence of hetereoskedasticity?"
    ]
@@ -417,7 +480,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2h). Produce the QQ-plot of the <b>wls_residuals</b> vs the Normal distribution."
    ]
@@ -431,7 +497,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2i). Compared to the OLS residuals, is the Normal fit better? If so, how?"
    ]
@@ -445,7 +514,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2j). Transform the WLS predictions (<b>wls_y_hat</b>) to the same scale as the original variable (<b>y</b>).<br>\n",
     "Save the transformation as <b>wls_y_hat_transformed</b>. <br>\n",
@@ -461,7 +533,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2k). On the same plot, produce in different colors: <br>\n",
     "1. Scatter plot of the observed data (x, y) <br>\n",
@@ -478,7 +553,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2l). Using the WLS regression summaries and the plots, contrast the regression fit for both the OLS and WLS cases:<br>\n",
     "i. Are the coefficient estimates much different? Is that what you had expected? <br>\n",
