--- a/regression/Simpe OLS.ipynb
+++ b/regression/Simpe OLS.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "# Ordinary Least Squares Regression\n",
     "In this exercise, we will build simple OLS Regression models, both single and multivariable. We will also evaluate the goodness of fit of our simple models.\n",
@@ -11,18 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jehangiramjad1/anaconda/lib/python2.7/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
-      "  from pandas.core import datetools\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Import the necessary libraries\n",
     "%matplotlib inline\n",
@@ -36,7 +30,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "Read the data as a pandas dataframe. For refernece: https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.html"
    ]
@@ -54,31 +51,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(0a). Print the number of observations in the dataset. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "392\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(df))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(0b). Print all the columns in the dataset"
    ]
@@ -92,7 +85,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(0c).Produce a Scatter plot of all variables against each other. <br> \n",
     "Feel free to use the <b>scatter_plot_dataframe()</b> function in utils.py. <br>\n",
@@ -108,7 +104,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(0d). Produce a plot of correaltions between all variables. <br>\n",
     "Feel free to use the <b>correlation_plot()</b> function in utils.py"
@@ -123,7 +122,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(0e). Using the plots above, can you identify the highly collinear pairs of variables? "
    ]
@@ -137,37 +139,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
-    "(0f). Produce two subsets of your data: a random subset for training and the remaining for testing. You should have roughly 70% of the data in training and the remaining roughly 30% in testing. Name your datasets as <b>df_train</b> and <b>df_test</b>."
+    "(0f). Produce two subsets of your data: a random subset for training and the remaining for testing. Note that the subsets MUST not overlap (i.e. if you use sampling then do so without-replacement). You should have roughly 70% of the data in training and the remaining roughly 30% in testing. Name your datasets as <b>df_train</b> and <b>df_test</b>."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(274, 118)\n"
-     ]
-    }
-   ],
-   "source": [
-    "random_indices = np.sort(np.random.choice(range(0, len(df)), int(0.7*len(df)), replace=False))\n",
-    "df_train = df[:][0:274]\n",
-    "df_test = df[:][274:]\n",
-    "print(len(df_train), len(df_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -178,7 +156,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "<b> (1). Single Variable OLS Regression.</b> <br>\n",
     "We will start with a single variable regression model. We hypothesize a simple linear relationship (with intercept) between 'mpg' and 'horsepower'"
@@ -186,7 +167,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1a). On <b>df_train</b> ONLY, build a simple OLS model using <b>statsmodels.OLS</b> <br>\n",
     "Your dependent variable is 'mpg'; <br>\n",
@@ -205,7 +189,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1b). Use statsmodels' <b>fit()</b> function to fit the model. Store the output in a variable called <b>sv_results</b>"
    ]
@@ -219,10 +206,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
-    "(1c). Print a summary of the results by calling <b>fit()</b> on the result from <b>fit()</b>. You can do so by calling <b>summary()</b> on <b>sv_results</b>. <br>\n",
-    "You can pass an array of columns as 'xname' to show the column names in the output "
+    "(1c). Print a summary of the results by calling <b>summary()</b> on the result from <b>fit()</b>.<br> \n",
+    "You can pass an array of columns as <b>xname</b> to show the column names in the output"
    ]
   },
   {
@@ -234,7 +224,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1d). Interpret the Results: <br>\n",
     "i. Are the intercept and 'horsepower' statistically significant? <br>\n",
@@ -250,9 +243,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
-    "(1e). Produce in-sample predictions using the regression relationship. Call the <b>predict()</b> function on your model. Use <b>sv_results.params</b> to pass the model parameters. For in-sample predictions, no <b>exog</b> variable is necessary. <br>\n",
+    "(1e). Produce in-sample predictions using the regression relationship. Call the <b>predict()</b> function on <b>sv_results</b>.\n",
     "Store your predictions as <b>sv_y_hat</b>."
    ]
   },
@@ -265,7 +261,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1f). On the same plot (using different colors): <br>\n",
     "1. Produce a scatter plot 'mpg' vs 'horsepower'; <br>\n",
@@ -282,7 +281,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1g). Does the best fit line appear to do justice to the data?"
    ]
@@ -296,7 +298,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1h). Produce the residuals between observed mpg and in-sample predictions. Store them as <b>sv_residuals</b>."
    ]
@@ -310,7 +315,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1i). Produce a scatter plot of the residuals vs 'horsepower'. Label your plot and axes."
    ]
@@ -324,7 +332,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1j). Produce a histogram of the <b>sv_residuals</b>."
    ]
@@ -338,7 +349,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1k). Now produce a QQ-plot of the residuals vs the Normal distribution. You can use the <b>probplot()</b> function in the <b>Scipy.stats</b> library using default options."
    ]
@@ -352,7 +366,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(1l). Do the histogram and QQ-plot suggest that the residuals are Normally distributed?"
    ]
@@ -366,7 +383,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "<b>(2). Two Variable OLS Regression. </b> <br>\n",
     "We will now add one more variable to the single variable regression model. We hypothesize a simple linear relationship (with intercept) between 'mpg', 'horsepower' and 'horsepower' (squared)."
@@ -374,7 +394,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "We first introduce a squared-horsepower column."
    ]
@@ -390,7 +413,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2a). Use the <b>introduce_power_terms()</b> function in <b>utils.py</b> to update the dataframe (df) with the new squared column. Be sure to provide <b>power=2</b> to <b>introduce_power_terms()</b>"
    ]
@@ -404,7 +430,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2b). Print the columns in the dataset and observe the new column you've just added."
    ]
@@ -418,7 +447,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2c). Build a simple OLS model using <b>statsmodels.OLS</b>. \n",
     "Your dependent variable is 'mpg'; \n",
@@ -437,7 +469,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2d). Similar to the exercise above: fit the model, produce in-sample predictions and residuals. <br>\n",
     "Save your in-sample predictions as <b>mv_y_hat</b> <br>\n",
@@ -453,7 +488,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2e). On the same plot (using different colors):<br>\n",
     "1. Produce a scatter plot 'mpg' vs 'horsepower'; <br>\n",
@@ -470,7 +508,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2f). Does the best fit line now appear to do better justice to the data? Why or why not?"
    ]
@@ -484,7 +525,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2g). Produce a histogram of the <b>mv_residuals</b>."
    ]
@@ -498,7 +542,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2h). Produce a QQ-plot vs Normal distribution of the <b>mv_residuals</b>."
    ]
@@ -512,7 +559,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "(2i). Do the histogram and QQ-plot suggest that the residuals are Normally distributed?"
    ]
@@ -526,16 +576,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
-    "(2j). What model among the single-variable and multi-variable ones would you prefer, and why?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "(Type your answer here)"
+    "(2j). Wrap part 0f. into a function <b>train_test_split()</b> that returns a random training and test set from a dataframe. Recall the training set should be of size roughly 70% and the test set 30%. "
    ]
   },
   {
@@ -544,6 +590,40 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "source": [
+    "(2k). Use <b>train_test_split()</b> to produce 10 random subsets of the data for training and testing. Using the random splits, run 10 trials of the single variable and multivariable regression. Train your models on the Test set and then produce predictions on the corresponding Test set. Record the Mean-Squared Error on each of the 10 test sets. Print out the average Mean-Squared Error on the test sets for both the single varialbe and multivariable models. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "source": [
+    "(2l). What model among the single-variable and multi-variable ones would you prefer, and why? Consider both the regression fits on the Training data and the Mean-Squared Error on the Test set(s)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Type your answer here)."
+   ]
   }
  ],
  "metadata": {
